# pkg

./: .drone.yml  .gitignore  Cargo.toml
src/: config.rs  id.rs  installer.rs  main.rs  package.rs  utils.rs
src/cmd/: add.rs  check.rs  complete.rs  install.rs  list.rs  mod.rs  remove.rs  repo.rs
src/download/: http.rs  mod.rs
src/install/: event.rs  installer.rs  mod.rs
src/pkgscript/: ast.rs  mod.rs  parser.rs
src/store/: content.rs  mod.rs  storage.rs  store.rs  transaction.rs
