[package]
name = "pkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
colored = "2.0.0"
anyhow = "1.0.57"
fs_extra = "1.2.0"
temp-dir = "0.1.11"
reqwest = "0.11.10"
serde_dhall = "0.11.0"
clap = { version = "3.1.17", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
