[package]
name = "pkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
hex = "0.4.3"
tar = "0.4.38"
sha2 = "0.10.2"
chrono = "0.4.19"
flate2 = "1.0.23"
colored = "2.0.0"
anyhow = "1.0.57"
fs_extra = "1.2.0"
temp-dir = "0.1.11"
reqwest = "0.11.10"
serde_dhall = "0.11.0"
clap_complete = "3.1.4"
strum_macros = "0.24.0"
clap = { version = "3.1.17", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
