[package]
name = "pkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
hex = "0.4.3"
sha2 = "0.10.2"
globset = "0.4.8"
chrono = "0.4.19"
colored = "2.0.0"
futures = "0.3.21"
anyhow = "1.0.57"
fs_extra = "1.2.0"
tokio-tar = "0.3.0"
temp-dir = "0.1.11"
serde_dhall = "0.11.0"
clap_complete = "3.1.4"
indicatif = "0.17.0-beta.1"
clap = { version = "3.1.17", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["stream"] }
tokio-util = { version = "0.7.1", features = ["compat"] }
async-compression = { version = "0.3.13", features = ["gzip", "tokio"] }
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros", "sync"] }
